--- a/css/style.css
+++ b/css/style.css
@@ -363,34 +363,35 @@ nav.navbar {
 
 }
 .dropdown_menu {
-    width: 170px;
-    background: #fff;
-    border-radius: 5px;
-    position: absolute;
-    left: 0px;
-    bottom: -90px;
-    z-index: 999;
-    opacity: 0;
-    visibility: hidden;
-    border: transparent;
-    transition: all linear .4s;
-    -webkit-transition: all linear .4s;
-    -moz-transition: all linear .4s;
-    -ms-transition: all linear .4s;
-    -o-transition: all linear .4s;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+	width: 170px;
+	background: #fff;
+	border-radius: 5px;
+	position: absolute;
+	left: 0px;
+	bottom: -118px;
+	z-index: 999;
+	opacity: 0;
+	visibility: hidden;
+	border: transparent;
+	transition: all linear .4s;
+	-webkit-transition: all linear .4s;
+	-moz-transition: all linear .4s;
+	-ms-transition: all linear .4s;
+	-o-transition: all linear .4s;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
 }
 .drop_item,
 .drop_item:focus, .drop_item:hover {
 	color: #1e2125;
 	background-color: #ffffff;
 }
-.drop_down:hover .dropdown_menu{
-    opacity: 1;
-    visibility: visible;
+.drop_down:hover .dropdown_menu {
+	opacity: 1;
+	visibility: visible;
+	bottom: -102px;
 }
 
 
@@ -1415,7 +1416,7 @@ background: #49596d81;
 
 .teacher_text {
     text-align: center;
-    background: #CCC;
+    background: #E3E4EC;
     padding: 15px 0;
 }
 
@@ -1535,6 +1536,14 @@ background: #49596d81;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+    transition: all linear .3s;
+    -webkit-transition: all linear .3s;
+    -moz-transition: all linear .3s;
+    -ms-transition: all linear .3s;
+    -o-transition: all linear .3s;
+}
+.get_in_touch button:hover{
+    background: #49596d;
 }
 .footer_item .links{
     padding: 0;
