--- a/css/responsive.css
+++ b/css/responsive.css
@@ -245,6 +245,10 @@
 .footer_item .links li a {
 	font-size: 16px;
 }
+/* Resistration page */
+.margin_small{
+	margin-bottom: 20px;
+}
 
 }
 
@@ -550,7 +554,10 @@ th, td {
 	font-size: 16px;
 }
 
-
+/* Resistration page */
+.margin_small{
+	margin-bottom: 20px;
+}
 
 }
 @media (max-width: 373.98px) {
